fix long nickname overflow in menu>profile on ipad #2689

--- a/app/assets/stylesheets/layouts/l-top_menu-v2/menu.sass
+++ b/app/assets/stylesheets/layouts/l-top_menu-v2/menu.sass
@@ -171,9 +171,12 @@
         margin-left: auto
 
       & > span
-        +gte_ipad
+        +gte_laptop
           min-width: 180px
           max-width: 250px
+
+        +ipad
+          width: 180px
 
         img
           height: 30px
